--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "require-hash",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Require file paths relative to your projects package.json file using #",
   "main": "require-hash.js",
   "scripts": {
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/kjones1876/require-hash/issues"
   },
-  "homepage": "https://github.com/kjones1876/require-hash#readme"
+  "homepage": "https://github.com/kjones1876/require-hash#readme",
+  "dependencies": {
+    "find-package-json": "^1.0.0"
+  }
 }
