--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "require-hash",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Require file paths relative to your projects package.json file using #",
   "main": "require-hash.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/kjones1876/require-hash#readme",
   "dependencies": {
-    "find-package-json": "^1.0.0"
+    "find-package-json": "^1.0.0",
+    "stack-trace": "0.0.9"
   }
 }
